docs/api/qiskit/0.19/qiskit.aqua.components.multiclass_extensions.MulticlassExtension.mdx
---
title: MulticlassExtension (v0.19)
description: API reference for qiskit.aqua.components.multiclass_extensions.MulticlassExtension in qiskit v0.19
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.aqua.components.multiclass_extensions.MulticlassExtension
---

# MulticlassExtension

<Class id="qiskit.aqua.components.multiclass_extensions.MulticlassExtension" isDedicatedPage={true} github="https://github.com/qiskit-community/qiskit-aqua/tree/stable/0.7/qiskit/aqua/components/multiclass_extensions/multiclass_extension.py" signature="MulticlassExtension" modifiers="class">
  Base class for multiclass extension.

  This method should initialize the module and use an exception if a component of the module is not available.

  ## Methods

  <span id="multiclassextension-predict" />

  ### predict

  <Function id="qiskit.aqua.components.multiclass_extensions.MulticlassExtension.predict" signature="MulticlassExtension.predict(x)" modifiers="abstract">
    Applying multiple estimators for prediction.

    **Parameters**

    **x** (*numpy.ndarray*) – input points
  </Function>

  <span id="multiclassextension-set-estimator" />

  ### set\_estimator

  <Function id="qiskit.aqua.components.multiclass_extensions.MulticlassExtension.set_estimator" signature="MulticlassExtension.set_estimator(estimator_cls, params=None)">
    Called internally to set `Estimator` and parameters :type estimator\_cls: `Callable`\[\[`List`], `Estimator`] :param estimator\_cls: An `Estimator` class :type params: `Optional`\[`List`] :param params: Parameters for the estimator

    **Return type**

    `None`
  </Function>

  <span id="multiclassextension-test" />

  ### test

  <Function id="qiskit.aqua.components.multiclass_extensions.MulticlassExtension.test" signature="MulticlassExtension.test(x, y)" modifiers="abstract">
    Testing multiple estimators each for distinguishing a pair of classes.

    **Parameters**

    *   **x** (*numpy.ndarray*) – input points
    *   **y** (*numpy.ndarray*) – input labels
  </Function>

  <span id="multiclassextension-train" />

  ### train

  <Function id="qiskit.aqua.components.multiclass_extensions.MulticlassExtension.train" signature="MulticlassExtension.train(x, y)" modifiers="abstract">
    Training multiple estimators each for distinguishing a pair of classes.

    **Parameters**

    *   **x** (*numpy.ndarray*) – input points
    *   **y** (*numpy.ndarray*) – input labels
  </Function>
</Class>

